HCI/experiments_v2/reference/nuclear_semf/stderr.log
  File "/sessions/epic-gracious-lovelace/mnt/Claude CoWorker/Current-Repo/Hs/HCI/cnt_v2/cnt.py", line 1607
    ordering = {
               ^
SyntaxError: '{' was never closed
